# lightning-bug-regression

./: .gitignore  README.md  design.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_external_systems_category.py  0003_auth_users_tokens.py  0004_target_versions.py  0005_runs_errored_column.py  0006_external_systems_status_realign.py  0007_normalize_case_id_prefix.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  cases.py  healthz.py  llm_prompt.py  runs.py
backend/app/runner/: __init__.py  assertions.py  case_normalizer.py  dsn_builder.py  event_broker.py  external_deps_loader.py  jinja_render.py  log_grep_driver.py  orchestrator.py  shell_driver.py  sql_driver.py  step_kinds.py  types.py
backend/app/storage/: __init__.py  models.py  sqlite_store.py  yaml_loader.py
backend/app/utils/: __init__.py  status_drift.py  time.py
backend/scripts/: __init__.py  run_m1_dogfood.py
backend/tests/: test_admin_target_versions.py  test_alembic_upgrade.py  test_api_admin.py  test_api_admin_step_kinds.py  test_api_auth.py  test_api_cases.py  test_api_cases_query.py  test_api_generate_draft.py  test_api_healthz.py  test_api_runs.py  test_api_status_drift.py  test_api_submit.py  test_api_try.py  test_api_validate.py  test_assertions.py  test_case_normalizer.py  test_dogfood_script.py  test_dsn_builder.py  test_event_broker.py  test_external_deps_loader.py  test_jinja_render.py  test_log_grep_driver.py  test_orchestrator.py  test_runner_types.py  test_shell_driver.py  test_sql_driver.py  test_sqlite_store.py  test_status_drift.py  test_time_utc.py  test_yaml_loader.py
(+312 files in other folders)
