[project]
name = "lightning-bug-regression-backend"
version = "0.1.0"
description = "Lightning post-upgrade regression test runner (backend)"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
