[project]
name = "lightning-bug-regression-backend"
version = "0.1.0"
description = "Lightning post-upgrade regression test runner (backend)"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "packaging>=24",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2,<3",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23",
  "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
